# fazic

./: LICENSE  README.md  Rakefile  _headers  _redirects  fazic.html
.github/workflows/: build.yml  test_fazic_lib.yaml
app/: application.rb  index.html.slim  router.rb  store.rb  stylesheet.css.scss
app/components/: about.rb  commands.rb  disc.rb  examples.rb  footer.rb  home.rb  navbar.rb  patreons.rb  programs.rb  roadmap.rb
app/store/: commands.rb  examples.rb
app/styles/: _colors.scss  _commands.scss  _fazic.scss  _fonts.scss  _layout.scss  _media.scss  _programs.scss
fazic_fs/: cscreens.bas  dupa.bas  lines.bas
fazic_lib/: Cargo.toml  README.md  build.rs
fazic_mono/: .gitignore  .gitlab-ci.yml  .tool-versions  Cargo.toml  README.md  build.rs  index.html
fazic_mono/files/: Stair.bas  colors.bas  gosub.bas  if.bas  lines.bas  lineses.bas  stairway.bas  stra.bas  test.bas
fazic_mono/src/: ast.rs  emscripten.rs  grammar.rs  main.rs  node_builder.rs  parser.lalrpop  parser.rs  runtime.rs  screen.rs
fazic_mono/src/fazic/: ast.rs  compiler.rs  config.rs  enums.rs  lines.rs  mod.rs  node_builder.rs  nodes.rs  parser.rs  parser.rustpeg  program.rs  stack.rs  text_buffer.rs  variables.rs  vm.rs
fazic_mono/src/fazic/execute/: commands.rs  functions.rs  mod.rs  operators.rs
fazic_mono/src/fazic/parser/: grammar.lalrpop  mod.rs  node_builder.rs
fazic_mono/src/fazic/runtime/: ast.rs  commands.rs  execute.rs  mod.rs  node_builder.rs  operators.rs  parser.lalrpop  parser.rs  parser.rustpeg  program.rs  stack.rs  text.rs
fazic_mono/src/fazic/runtime/execute/: commands.rs  functions.rs  mod.rs  operators.rs
fazic_mono/src/fazic/screen/: chars.rs  mod.rs  palette.rs
fazic_mono/src/fazic/tests/: commands.rs  expressions.rs  functions.rs  mod.rs  parser.rs
fazic_mono/src/fazic/vm/: commands.rs  expressions.rs  functions.rs  mod.rs  other.rs
fazic_mono/src/parser/: grammar.lalrpop  mod.rs  node_builder.rs
fazic_mono/src/runtime/: mod.rs  text_buffer.rs
fazic_mono/src/screen/: chars.rs  colors.rs  mod.rs  text.rs  text_display.rs
fazic_mono/src/sdl_screen/: mod.rs  text_display.rs
fazic_mono/src/targets/: emscripten.js  emscripten.rs  mod.rs  other.rs
fazic_mono/src/tests/: commands.rs  mod.rs  parser.rs
fazic_mono/static/: index.css  index.html  index.js
fazic_sdl/: Cargo.toml  Makefile  README.md
fazic_site/: 404.html.erb  Rakefile  stylesheet.css.scss
fazic_static/: .gitignore  Gemfile  README.md  Rakefile  _headers  _redirects  fazic.html  index.html  index.html.erb  itch.html  stylesheet.css
fazic_wasm/: Cargo.toml  Makefile
fazic_wasm/src/: body.rs  canvas.rs  lib.rs
fazic_wasm/static/: index.html
fazic_wasm_js/: Cargo.toml  Makefile
static/: fazic.js
(+70 files in other folders)
