[package]
name = "fazic"
version = "0.1.0"
authors = ["Michał Kalbarczyk <fazibear@gmail.com>"]
build = "build.rs"

[build-dependencies]
peg = { version = "0.5" }

[dependencies]
rand = "~ 0.3"

[dependencies.sdl2]
version = "0.30"
default-features = true

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
hyper = "~ 0.10"
hyper-native-tls = "~ 0.2"

# [target.'cfg(target_os = "emscripten")'.dependencies]
# emscripten-sys = "*"
