[package]
name = "fazic"
version = "0.1.0"
authors = ["Michał Kalbarczyk <fazibear@gmail.com>"]
build = "build.rs"

[build-dependencies]
peg = { version = "*" }

[dependencies]
rand = "*"

[dependencies.sdl2]
version = "0.31"
default-features = true

#[target.'cfg(not(target_os = "emscripten"))'.dependencies]
#hyper = "~ 0.10"
#hyper-native-tls = "~ 0.2"

# [target.'cfg(target_os = "emscripten")'.dependencies]
# emscripten-sys = "*"
