[package]
name = "fazic"
version = "0.1.0"
authors = ["Michał Kalbarczyk <fazibear@gmail.com>"]
build = "build.rs"

[build-dependencies]
peg = { version = "0.8.1" }

[dependencies]
rand = "0.5.0"
simple_logger = "*"
log = "0.4.1"
peg = "0.8.1"

[dependencies.sdl2]
version = "0.31"
default-features = true

#[target.'cfg(not(target_os = "emscripten"))'.dependencies]
#hyper = "~ 0.10"
#hyper-native-tls = "~ 0.2"

# [target.'cfg(target_os = "emscripten")'.dependencies]
# emscripten-sys = "*"

[profile.release]
#lto = true
panic = 'abort'
